apps/manifest/flask-redis.yaml
# flask-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-redis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-redis
  template:
    metadata:
      labels:
        app: flask-redis
    spec:
      containers:
      - name: flask-redis
        image: seniboogie/flask-redis-app:3.0
        ports:
        - containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
