apps/manifest/cloudflared.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-dns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-dns
  template:
    metadata:
      labels:
        app: cloudflared-dns
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - proxy-dns
        - --address=0.0.0.0
        - --port=8053
        - --upstream=https://1.1.1.1/dns-query
        - --upstream=https://1.0.0.1/dns-query
        ports:
        - containerPort: 8053
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared-dns
  namespace: kube-system
spec:
  selector:
    app: cloudflared-dns
  ports:
  - name: dns
    port: 53 # CoreDNS will send to port 53
    protocol: UDP
    targetPort: 8053 # but inside pod cloudflared listens on 8053

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: cloudflared-dns
#   namespace: kube-system
# spec:
#   selector:
#     app: cloudflared-dns
#   ports:
#   - name: dns
#     port: 53
#     protocol: UDP
#     targetPort: 53
